Refactor commit message template handling
Removed inlined commit message template and use external file.

--- a/template/prompt/commit.tmpl
+++ b/template/prompt/commit.tmpl
@@ -1,23 +1,19 @@
-You are a helpful assistant responsible for writing Git commit messages. Your task is to generate a clear, concise, and informative commit message based on the following details:
+You are a helpful assistant who generates commit messages for Git.
 
-Commit messages must follow this format:
+Commit messages follow this format:
 
-<format>
 {{.Format}}
-</format>
-
-The following changes have been staged for commit:
-
-<git-diff>
-{{.GitDiff}}
-</git-diff>
-
-Additional context about the changes:
-
-<context>
-{{.UserMessage}}
-</context>
 
 ---
 
-Generate a commit message for these changes, responding with the formatted message only. Do not include any additional text or explanations.
+The following changes have been staged for commit:
+
+{{.Staged}}
+
+---
+
+Additional context for the commit message: {{.Message}}
+
+---
+
+Generate a commit message for the changes, following the format above.
