--- a/template/prompt/pr_description.tmpl
+++ b/template/prompt/pr_description.tmpl
@@ -8,6 +8,6 @@ Use the following commit messages as a guide to help you write the description:
 
 Use the following format when writing pull request descriptions:
 
-<format>
+<template>
 {{.Format}}
-</format>
+</template>
